[package]
name = "toolkit-zero-macros"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Soumyo Deep Gupta <deep.main.ac@gmail.com>"]
description = "Procedural macros for toolkit-zero"
license = "MIT"
repository = "https://github.com/d33p0st/toolkit-zero.git"
homepage = "https://d33p0st.github.io/toolkit-zero/"
documentation = "https://docs.rs/toolkit-zero-macros"
readme = "README.md"
keywords = ["macro", "proc-macro", "socket", "http", "toolkit-zero"]
categories = ["network-programming", "web-programming", "development-tools"]
exclude = ["target/", "*.d"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
socket-server = []
socket-client = []
serialization = []
location-browser = []
enc-timelock-keygen-now         = []
enc-timelock-keygen-input       = []
enc-timelock-async-keygen-now   = []
enc-timelock-async-keygen-input = []
dep-graph-capture               = []

[lib]
proc-macro = true

[dependencies]
syn   = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
